FEAT:Cookies and CodeRefactor
