# backend/server.js
@@ -1,13 +1,24 @@
 const express = require('express');
-const authRoutes = require('./routes/auth');
+const cookieParser = require("cookie-parser");
+const logger = require('./loggers/logger');
+const logRequests = require('./loggers/requestLogger');
 const { handleError } = require('./middleware/errorMiddleware');
+// Api Docs
+const swaggerJsdoc = require('swagger-jsdoc');
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require("./swagger.json")
+
+// All Routes 
+const authRoutes = require('./routes/auth');
 const jobRoutes = require('./routes/jobs');
-const userRoutes = require('./routes/partner');
-const swaggerUI = require('swagger-ui-express');
-const swaggerJSDoc = require('swagger-jsdoc');
+const companyRoutes = require('./routes/company');
+const staffRoutes = require('./routes/staff');
+const forgotPasswordRoute = require('./routes/forgotPassword');
+const jobFileRoutes = require("./routes/jobFile");
+
+
 const path = require('path');
 const glob = require('glob');
-const swaggerSpec = require('./swagger.json');
 
 // const userRoutes = require('./routes/users');
 // const applicationRoutes = require('./routes/applications');
@@ -22,29 +33,35 @@ const mongoose = require('mongoose');
 
 // MongoDB connection string
 const MONGODB_URI = process.env.MONGODB_URI || 'mongodb://localhost:27017/job_matching';
-console.log("Mongo Uri", MONGODB_URI);
 // Connect to MongoDB
 mongoose.connect(MONGODB_URI, { useNewUrlParser: true, useUnifiedTopology: true })
     .then(() => console.log('Connected to MongoDB'))
-    .catch((err) => console.error('Error connecting to MongoDB:', err));
+    .catch((err) => logger.error('Error connecting to MongoDB:', err));
 
 const PORT = process.env.PORT || 5000;
 
 const app = express();
-app.use(express.json());
+app.use(cookieParser())
+app.use(express.json()); // cookies parser
 app.use(cors());
+app.use(logRequests)
+// Routes 
 app.use('/api/auth', authRoutes);
-app.use('/api/partner', userRoutes);
+app.use('/api/staff', staffRoutes);
+app.use('/api/companies', companyRoutes);
 app.use('/api/jobs', jobRoutes);
+app.use('/api/jobFiles', jobFileRoutes);
+app.use('/api', forgotPasswordRoute);
 
-// app.use('/api/users', userRoutes);
-// app.use('/api/applications', applicationRoutes);
+
+
+
+app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));// app.use('/api/applications', applicationRoutes);
 app.use(handleError);
 
-console.log("Swagger Spec", swaggerSpec);
-app.use('/docs', swaggerUI.serve, swaggerUI.setup(swaggerSpec));
 app.listen(PORT, () => {
     console.log(`Server is running on port ${PORT}`);
+    logger.info(`Server is running on port ${PORT}`);
 });
 
 module.exports = app;
